<resources>
    <string name="app_name">今日打卡</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="stu1">何悲何爱何必去愁与苦\n
    何必笑骂恨与爱\n
    人间不过是你寄身之处\n
    银河里才是你灵魂的徜徉地\n
    人间不过是你无形的梦\n
    偶然留下的梦尘世梦\n
    以身外身做银亮色的梦\n
    以身外身做梦中梦\n
     \t\t\t\t\t\t\t\t\t\t\t        ——《给电影人的情书》</string>
    <string name="stu2">谢谢大家的关心，
        我确实有女朋友了，
        就是关系不太稳定\n\n\n\n



        有时候梦不到</string>
    <string name="stu3">耳机党</string>
    <string name="stu4">打工人打工魂</string>
    <string name="stu5">毫无干劲 只有食欲</string>
    <string name="stu6">一周两顿小龙坎</string>
    <string name="stu7">与梦想平等交易，与喧嚣保持距离</string>
    <string name="stu8">谢谢光棍同学 的光棍节礼物</string>
    <string name="stu9">哈哈哈哈哈澳洲菩萨！锤哥开发的健身app发布一张新图。
转发这个锤菩萨，你也可以心想事成！</string>
    <string name="stu10">转走，近期会有好运发生的。</string>
    <string name="stu11">美好的一天从薇薇的鸡蛋面开始\n
从雷霆的糖醋排骨结束
我太幸福了！！！</string>
    <string name="stu12">今天的第一份开心</string>
    <string name="stu13">果然运气也是遵循守恒定律的
前两轮白给，后面就给我来个重量级选手</string>
    <string name="stu14">P1老师说把它放在窗帘上不容易脏（老师也是个小可爱吧）\n
P2被海云抡了一巴掌之后</string>


    <string name="news1">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<b>通知</b>\n
各单位:\n
\t	根据师生乘车需求，现就10月11日增开车辆信息通知如下：\n
\t	一、增开车辆为38座（不含驾驶）\n
\t	二、从校区出发时间为14：30，从本部发车时间为18：30\n
\t	三、其余事项不变\n
\t\t\t\t		                 校区综合办
\t\t\t\t		           2020年10月9日</string>
    <string name="news2">
   \t     学院路160号，这边风景独好\n
	盼望着，盼望着......\n
	终于等来了美好而好奇的你们\n
	经过了一整个暑假的休息，终于踏入了大学校园。\n
	小萌新们，\n
	是不是对学校充满好奇？\n
	别急！有我！\n
	小荣这就为你递上一份攻略！
    </string>
    <string name="news3">
        \t\t<b>校区党工委书记熊海灵带队参加“大数据智能化赋能生猪产业智博会”</b>\n

校区党工委书记<b>熊海灵</b>带队参加\n

“大数据智能化赋能生猪产业智博会”\n

8月29日，2020线上中国国际智能产业博览会首场论坛——大数据·智能化赋能生猪产业高峰论坛在荣昌召开、\n
校区党工委书记熊海灵带领校区教师、国家级生猪大数据中心联合实验室主任曾兵教授、副主任李常营博士参加了论坛。\n
大数据、人工智能是我国产业升级的战略支撑，也是生猪产业高质量发展的必由之路，对于提高养猪技术水平、\n
稳定养猪生产能够发挥重要作用。论坛上，国内外专家和企业家围绕“大数据·智能化赋能生猪产业”主题建言献策，\n
共商生猪行业智能化发展，分析与解读利用大数据、智能化手段赋能生猪产业水平，助推生猪行业数字经济发展，\n
助力国家级生猪大数据中心建设。\n
通过论坛，校区加强与相关单位的学术交流，与他们建立了良好的合作关系，为学院大数据中心的良好发展奠定了基础。
    </string>
    <string name="news4">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t<b>河南汝州市与荣昌校区签署</b>\n

战略合作框架协议\n
7月18日，河南汝州市委副书记、市长刘鹏带队来校区考察交流。汝州市副市长焦慧娟，汝州市政府副秘书长、国资局局长吴会锋，\n
汝州市畜牧局局长李天玺，汝州市农发公司总经理张亚格，国家生猪市场董事总经理张彬，校区管委会主任左福元、\n
副主任赵智华、杨新斌、科研办主任曹烈斌、动物科学学院副院长宋振辉出席座谈会。会议由杨新斌主持。\n
会上，张彬讲话指出，作为西南大学的校友，感谢母校的培养，感谢学校对国家生猪市场的支持，并介绍了国家生猪市场运行情况。\n
宋振辉介绍了动物科学学院的学科建设、人才培养和师资队伍等情况，并对学院开展的服务地方经济情况作了详细介绍。\n
刘鹏介绍了汝州市经济社会发展情况，特别是生猪产业发展情况，提出开展市校合作的建议。汝州市位于河南省中西部\n
，因北汝河贯穿全境而得名，区位优势突出，经济基础扎实，交通条件优良，市校合作有着良好的基础、广阔的前景，\n
希望与校区在生猪产业等方面加强合作，努力实现校地双方协同共赢。\n
左福元欢迎刘鹏市长一行来校区考察交流。他指出，荣昌校区历来重视校地合作，长期为地方提供科研和人才服务，\n
特别是在服务地方农牧业方面成效显著，校区愿为汝州市畜牧产业发展提供科研支撑和智力支持。\n
经过友好的沟通交流，校地双方决定签署校地合作协议。\n
校区管委会副主任杨新斌与汝州市政府副市长焦慧娟代表双方在合作协议上签字。\n
    </string>
    <string name="news5">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t<b>关于调整2020年"端午节"期间</b>\n
交通车运行的通知\n
各单位：\n
根据学校2020年"端午节"放假安排，经研究决定对"端午节"期间的交通车运行作如下调整：\n
1.6月25、26日两天停止运行。\n
2.6月27日运行时间：14：30（校区至本部；19：00（本部至校区）。\n
3.6月28日运行时间：8：00（校区至本部；17：40（本部至校区）。\n
其余按原通知执行，若已预订请重新预订，由此带来的不便，敬请谅解。\n
特此通知\n
荣昌校区综合办\n
2020年6月20日\n
    </string>
    <string name="登录方式">学号</string>
    <string name="请输入用户密码">请输入用户密码</string>
    <string name="登录">登录</string>
    <string name="忘记密码">忘记密码</string>
    <string name="注册">手机号快速注册</string>
    <string name="手机号">手机号</string>
    <string name="验证码">验证码</string>
    <string name="设置密码">设置密码</string>
    <string name="获取验证码">获取验证码</string>
    <string name="下一步">下一步</string>
    <string name="西南大学商贸学院信息管理系">西南大学商贸学院信息管理系</string>
    <string name="手机号注册">手机号</string>
    <string name="QQ">QQ</string>
    <string name="微信">微信</string>
</resources>