<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Welcome.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/loadbackground1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loadbackgrand" android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username"
            android:background="@drawable/usercorner"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/password" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:paddingLeft="10dp" android:hint="@string/登录方式"
            app:layout_constraintHorizontal_bias="0.505" android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:background="@drawable/usercorner"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:paddingLeft="10dp" android:hint="@string/请输入用户密码"
            android:textColorHint="@color/colorWhite" android:textColor="@color/colorWhite"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>
        <TextView
            android:text="@string/忘记密码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/progressBtn"
            app:layout_constraintTop_toBottomOf="@+id/wechattext" android:layout_marginTop="16dp"/>
        <TextView
            android:text="@string/西南大学商贸学院信息管理系"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/loadbackgrand" android:layout_marginBottom="50dp"/>
        <swu.cx.drawerdemo.Welcome.ProgressBtn
            android:layout_width="300dp" android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="@+id/guideline"
            android:id="@+id/progressBtn">
        </swu.cx.drawerdemo.Welcome.ProgressBtn>
        <TextView
            android:text="@string/登录"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/load" app:layout_constraintStart_toStartOf="@+id/progressBtn"
            app:layout_constraintEnd_toEndOf="@+id/progressBtn"
            app:layout_constraintTop_toTopOf="@+id/progressBtn"
            app:layout_constraintBottom_toBottomOf="@+id/progressBtn" android:textSize="18sp"
            android:textColor="@color/colorWhite"/>
        <ImageView
            android:src="@drawable/wechat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/wechat"
            app:layout_constraintTop_toTopOf="@+id/qq" app:layout_constraintBottom_toBottomOf="@+id/qq"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/qq"
            app:layout_constraintEnd_toEndOf="@+id/progressBtn" android:layout_marginEnd="8dp"/>
        <ImageView
            android:src="@drawable/qq"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/qq"
            app:layout_constraintStart_toEndOf="@+id/phone" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/wechat"
            app:layout_constraintTop_toTopOf="@+id/phone" app:layout_constraintBottom_toBottomOf="@+id/phone"
            />
        <ImageView
            android:src="@drawable/phone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/phone" app:layout_constraintStart_toStartOf="@+id/progressBtn"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBtn"
            app:layout_constraintStart_toEndOf="@+id/loadbackgrand"
            app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/qq"/>
        <TextView
            android:text="@string/手机号注册"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintEnd_toEndOf="@+id/phone" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phone"/>
        <TextView
            android:text="@string/QQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="@+id/qq"
            app:layout_constraintStart_toStartOf="@+id/qq" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/qq"/>
        <TextView
            android:text="@string/微信"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wechattext" app:layout_constraintStart_toStartOf="@+id/wechat"
            app:layout_constraintEnd_toEndOf="@+id/wechat" android:textSize="18sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/wechat"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>